--- a/.gitignore
+++ b/.gitignore
@@ -50,3 +50,11 @@ modules.order
 Module.symvers
 Mkfile.old
 dkms.conf
+
+#idf
+build/
+sdkconfig
+sdkconfig.old
+components/
+.vscode/
+.devcontainer/
