--- a/prac6/main/CMakeLists.txt
+++ b/prac6/main/CMakeLists.txt
@@ -1,3 +1,3 @@
 idf_component_register(SRCS "main.c" "web_server.c" "my_wifi.c"
                     INCLUDE_DIRS "."
-                    EMBED_TXTFILES "view.html")
+                    EMBED_TXTFILES "top_view.html" "bot_view.html")
